docs/apache-airflow-providers-amazon/1.4.0/_sources/_api/airflow/providers/amazon/aws/transfers/s3_to_ftp/index.rst.txt
:mod:`airflow.providers.amazon.aws.transfers.s3_to_ftp`
=======================================================

.. py:module:: airflow.providers.amazon.aws.transfers.s3_to_ftp


Module Contents
---------------

.. py:class:: S3ToFTPOperator(*, s3_bucket, s3_key, ftp_path, aws_conn_id='aws_default', ftp_conn_id='ftp_default', **kwargs)

   Bases: :class:`airflow.models.BaseOperator`

   This operator enables the transferring of files from S3 to a FTP server.

   :param ftp_conn_id: The ftp connection id. The name or identifier for
       establishing a connection to the FTP server.
   :type ftp_conn_id: str
   :param ftp_path: The ftp remote path. This is the specified file path for
       uploading file to the FTP server.
   :type ftp_path: str
   :param s3_bucket: The targeted s3 bucket. This is the S3 bucket from
       where the file is downloaded.
   :type s3_bucket: str
   :param s3_key: The targeted s3 key. This is the specified file path for
       downloading the file from S3.
   :type s3_key: str

   .. attribute:: template_fields
      :annotation: = ['s3_bucket', 's3_key']

      

   
   .. method:: execute(self, context)




